py/k8s/dev/azure/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: r2r-dev
spec:
  type: ExternalName
  externalName:  pg-amplifi-r2r-server-dev-01.postgres.database.azure.com
