py/k8s/dev/azure/r2r.yaml
# Config Map, Secret, Deployment and Service for R2R
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: r2r
  namespace: r2r-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: r2r
  template:
    metadata:
      labels:
        app: r2r
    spec:
      containers:
      - name: r2r
        command:
          - /bin/sh
          - -c
          - |
            exec uvicorn core.main.app_entry:app --host $${R2R_HOST} --port $${R2R_PORT}
        image: cramplifidev.azurecr.io/r2r:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 7272
        readinessProbe:
          httpGet:
            port: 7272
            path: /v2/health
          initialDelaySeconds: 15
        livenessProbe:
          httpGet:
            port: 7272
            path: /v2/health
          initialDelaySeconds: 15
          periodSeconds: 10
        volumeMounts:
          - mountPath: /mnt/r2r-config
            name: r2r-config-mount
      restartPolicy: Always
      volumes:
        - name: r2r-config-mount
          persistentVolumeClaim:
            claimName: pvc-r2r-config-blob
---
apiVersion: v1
kind: Service
metadata:
  name: r2r
  namespace: r2r-dev
spec:
  ports:
  - protocol: TCP
    port: 7272
    targetPort: 7272
  type: LoadBalancer
  selector:
    app: r2r
